--- a/index.html
+++ b/index.html
@@ -583,6 +583,49 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Articles">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>¿What positive consequences did the ratification of ILO Convention N. 169 on Indigenous and Tribal Peoples in Independent Countries have in Peru?</h4>
+                <p></p>
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://docs.google.com/document/d/1KqbV3Bn07B3EXW7BnCPkRSimQAX8eQvS/edit?usp=sharing&ouid=113947215739336944241&rtpof=true&sd=true" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Articles">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>La importancia de los Estudios Generales (EE.GG.) en la malla curricular de la educación universitaria en el Perú durante el siglo XXI</h4>
+                <p></p>
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://docs.google.com/document/d/1ObjYC5wBIgF587Of_AwpUO_iGp3m_QDko6J5fKEOywY/edit?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Articles">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Atrapado en las redes del terror: el yihadismo y sus objetivos en el uso de las redes sociales durante el siglo XXI.I</h4>
+                <p></p>
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://docs.google.com/document/d/1W0ugxBkATOSnCfCTjvSZ7kRtBNWMTyKK/edit?usp=share_link&ouid=113947215739336944241&rtpof=true&sd=true" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
       </div>
