--- a/index.html
+++ b/index.html
@@ -268,6 +268,18 @@
               <p>Seventh term student with outstanding grades. Top 10% </p>
             </div>
             <div class="resume-item">
+              <h4> Introduction to Machine Learning for Social Sciences and Public Managment </h4>
+              <h5> January 2023 - March 2023</h5>
+              <p><em>Pontificia Universidad Católica del Perú, Lima, Perú</em></p>
+              <p>QLAB PUCP </p>
+            </div>
+            <div class="resume-item">
+              <h4> Introduction to Python for Social Sciences and Public Managment </h4>
+              <h5> January 2023 - March 2023</h5>
+              <p><em>Pontificia Universidad Católica del Perú, Lima, Perú</em></p>
+              <p>QLAB PUCP </p>
+            </div>
+            <div class="resume-item">
               <h4>Advanced English</h4>
               <h5>2020</h5>
               <p><em>Pontificia Universidad Católica del Perú Language Center, Lima, Perú</em></p>
